# campaignStats

./: .env  dockerfile  pyproject.toml  report.html  report_2023-06-11.html  report_2023-06-14.html  report_2023-06-21.html  report_2023-06-22.html  report_2023-06-23.html  report_2023-06-26.html  report_2023-06-28.html  report_2023-06-29.html  report_2023-07-01.html  report_2023-07-07.html  report_2023-07-11.html
campaign/: main.py
resources/: campaign.sql
